Fixed CSS when using `select2 widget`, a small `margin-left` gap was visible between the input and the dropdown.

--- a/src/collective/eeafaceted/dashboard/browser/static/collective.eeafaceted.dashboard.css
+++ b/src/collective/eeafaceted/dashboard/browser/static/collective.eeafaceted.dashboard.css
@@ -32,6 +32,15 @@ div#center---default---widgets div.faceted-widget {
     margin-right: 0.2em;
     margin-top: 0.1em;
 }
+/* remove margin-left for select2 widgets to avoid gap between input and frop down,
+   move the margin-left to the parent div */
+#content fieldset.widget-fieldset div.select2-container ul {
+    margin-left: 0em;
+}
+#content fieldset.widget-fieldset div.select2-container {
+    margin-left: 0.2em;
+}
+
 #content div#top---advanced---widgets .widget-fieldset > form {
     height: 100px;
     overflow-x: hidden;
